Closed Bug 385305 Opened 17 years ago Closed 17 years ago

Crash [@ already_AddRefed<nsRootAccessible>nsAccessNode::GetRootAccessible()]

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

Details

(Keywords: access, crash)

Crash Data

Attachments

(1 file)

From http://tinderbox.mozilla.org/showbuilds.cgi?tree=Firefox-Ports , I saw several crashes during page load test.

In accessible/src/atk/nsAccessibleWrap.cpp
1130         MAI_LOG_DEBUG(("\n\nReceived: EVENT_FOCUS\n"));
1131         nsRefPtr<nsRootAccessible> rootAccWrap = accWrap->GetRootAccessible();

I think
1114     nsAccessibleWrap *accWrap = GetAccessibleWrap(atkObj);
fails for some reason, perhaps mDOMNode is null, then accWrap is nil.
Attached patch patchSplinter Review
Attachment #269185 - Flags: review?(aaronleventhal)
Attachment #269185 - Flags: review?(aaronleventhal) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Crash Signature: [@ already_AddRefed<nsRootAccessible>nsAccessNode::GetRootAccessible()]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: