Bug 385305 Crash [@already_AddRefed<nsRootAccessible> nsAccessNode::GetRootAccessible()] r=aaronleventhal